[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jesse"
version = "1.12.0"
description = "A trading framework for cryptocurrencies"
readme = "README.md"
requires-python = "==3.13.*"
license = {text = "MIT"}
authors = [
    {name = "Saleh Mir", email = "saleh@jesse.trade"},
]
keywords = ["trading", "cryptocurrency", "bitcoin", "ethereum", "backtest", "algorithmic-trading"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "arrow>=1.4.0",
    "blinker>=1.4",
    "click>=8.3.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "peewee>=3.18.3",
    "psycopg2-binary>=2.9.9",
    "pydash>=6.0.0",
    "fnc>=0.5.3",
    "requests>=2.32.5",
    "scipy>=1.16.3",
    "statsmodels>=0.14.5",
    "tabulate>=0.8.9",
    "timeloop>=1.0.2",
    "websocket-client>=1.8.0",
    "wsaccel>=0.6.6",
    "simplejson>=3.16.0",
    "redis[hiredis]>=4.1.4",
    "fastapi>=0.121.2",
    "uvicorn>=0.38.0",
    "websockets>=10.0.0",
    "python-dotenv>=0.19.2",
    "aiofiles>=0.7.0",
    "numba>=0.62.1",
    "PyJWT>=2.8.0",
    "cryptography>=46.0.3",
    "ecdsa>=0.16.0",
    "optuna>=4.6.0",
    "eth-account>=0.13.5",
    "msgpack>=1.1.0",
    "starkbank-ecdsa>=1.1.0",
    "jesse-rust==1.0.1",
    "aioredis>=1.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.5",
]

[project.urls]
Homepage = "https://jesse.trade"
Documentation = "https://docs.jesse.trade"
Repository = "https://github.com/jesse-ai/jesse"
"Bug Tracker" = "https://github.com/jesse-ai/jesse/issues"
Discord = "https://jesse.trade/discord"

[project.scripts]
jesse = "jesse:cli"

[tool.hatch.build.targets.wheel]
packages = ["jesse"]

[tool.hatch.build.targets.sdist]
include = [
    "jesse/**",
    "README.md",
    "LICENSE",
]
exclude = [
    "tests/**",
    "assets/**",
]

[tool.hatch.build]
include = [
    "jesse/**/*.dll",
    "jesse/**/*.dylib",
    "jesse/**/*.so",
    "jesse/**/*.json",
]

